--- a/app/views/main/where.html.erb
+++ b/app/views/main/where.html.erb
@@ -66,7 +66,7 @@
     <h4>the amount of llama power that Earth produces is around 13,230,000,000,000,000,000 tons of TNT!</h4>
     <div class="formulaVariables">
         <span> hi </span>
-        <h5>P = LLama power!</h5>
+        <h5>P = Llama power!</h5>
         <h5><i>n</i> = Number of Llamas = 7,000,000</h5>
         <h5><i>y</i> = Average age in years = 15</h5>
         <h5><i>f</i> = Average fur length in inches = 4</h5>
